In GameLayout: fix status bar showing in the middle of the screen, fix list view scoreboard taking too much space and fix space in turn label

--- a/src/main/java/it/polimi/ingsw/view/gui/css/GameStylesheet.css
+++ b/src/main/java/it/polimi/ingsw/view/gui/css/GameStylesheet.css
@@ -1,11 +1,6 @@
 @import "BasicStylesheet.css";
 
 
-#gameBackgroundBlurPane {
-    -fx-background-color: background;
-    -fx-opacity: 0.5;
-}
-
 #gameLeftSide, #gameRightSide, #boardBackground {
     -fx-effect: dropshadow(three-pass-box, dark-grey, 7, 0, 0, 0);
     -fx-background-color: form-background;
